--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -15,6 +15,13 @@ doctrine:
         auto_mapping: true
         controller_resolver:
             auto_mapping: false
+        mappings:
+            User:
+                type: attribute
+                is_bundle: false
+                dir: '%kernel.project_dir%/src/User/Infrastructure/Persistence'
+                prefix: 'App\User\Infrastructure\Persistence'
+                alias: User
 
 when@test:
     doctrine:
