--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -22,6 +22,12 @@ doctrine:
                 dir: '%kernel.project_dir%/src/User/Infrastructure/Persistence'
                 prefix: 'App\User\Infrastructure\Persistence'
                 alias: User
+            Product:
+                type: attribute
+                is_bundle: false
+                dir: '%kernel.project_dir%/src/Product/Infrastructure/Persistence'
+                prefix: 'App\Product\Infrastructure\Persistence'
+                alias: Product
 
 when@test:
     doctrine:
